5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1592_1800.log
== SUBMITION (2019-04-03 14:09:29) 
-- CODE:
x = float(input("a:"))
y=float(input("b:"))
z= float(input("c:"))
var1=(x**2 + y**2 + z**2)
var2=(a + b + c)
var3=var1//var2

-- EXECUTION TIME:
0.208194
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 5, in <module>
    var2=(a + b + c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:09:30) 
-- CODE:
x = float(input("a:"))
y=float(input("b:"))
z= float(input("c:"))
var1=(x**2 + y**2 + z**2)
var2=(a + b + c)
var3=var1//var2

-- EXECUTION TIME:
0.264831
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 5, in <module>
    var2=(a + b + c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:09:30) 
-- CODE:
x = float(input("a:"))
y=float(input("b:"))
z= float(input("c:"))
var1=(x**2 + y**2 + z**2)
var2=(a + b + c)
var3=var1//var2

-- EXECUTION TIME:
0.167847
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 5, in <module>
    var2=(a + b + c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:09:30) 
-- CODE:
x = float(input("a:"))
y=float(input("b:"))
z= float(input("c:"))
var1=(x**2 + y**2 + z**2)
var2=(a + b + c)
var3=var1//var2

-- EXECUTION TIME:
0.280888
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 5, in <module>
    var2=(a + b + c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:09:30) 
-- CODE:
x = float(input("a:"))
y=float(input("b:"))
z= float(input("c:"))
var1=(x**2 + y**2 + z**2)
var2=(a + b + c)
var3=var1//var2

-- EXECUTION TIME:
0.373913
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 5, in <module>
    var2=(a + b + c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:09:30) 
-- CODE:
x = float(input("a:"))
y=float(input("b:"))
z= float(input("c:"))
var1=(x**2 + y**2 + z**2)
var2=(a + b + c)
var3=var1//var2

-- EXECUTION TIME:
0.520102
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 5, in <module>
    var2=(a + b + c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:09:30) 
-- CODE:
x = float(input("a:"))
y=float(input("b:"))
z= float(input("c:"))
var1=(x**2 + y**2 + z**2)
var2=(a + b + c)
var3=var1//var2

-- EXECUTION TIME:
0.569028
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 5, in <module>
    var2=(a + b + c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:09:30) 
-- CODE:
x = float(input("a:"))
y=float(input("b:"))
z= float(input("c:"))
var1=(x**2 + y**2 + z**2)
var2=(a + b + c)
var3=var1//var2

-- EXECUTION TIME:
0.152786
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1592/1800/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:12:03) 
-- CODE:
x = float(input("a:"))
y=float(input("b:"))
z= float(input("c:"))
var1=(x**2 + y**2 + z**2)
var2=(a + b + c)
var3=var1/var2
print(round(x,7)
-- ERROR:
File "XXXX", line 8
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:12:17) 
-- CODE:
x = float(input("a:"))
y=float(input("b:"))
z= float(input("c:"))
var1=(x**2 + y**2 + z**2)
var2=(a + b + c)
var3=var1/var2
print(round(x,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var2=(a + b + c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:18:49) 
-- CODE:
x = float(input("a:"))
y=float(input("b:"))
z= float(input("c:"))
var1=(x**2 + y**2 + z**2)
var2=(a + b + c)
var3=var1/var
print(var3)
print(round(x,7))
                                                                                                                                                                   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var2=(a + b + c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:23:20) 
-- CODE:
x = float(input("a:"))
y=float(input("b:"))
z= float(input("c:"))
var1=(x**2 + y**2 + z**2)/ (a + b + c)
print(var1)
print(round(x,7))

                                                                                                                                                                   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1=(x**2 + y**2 + z**2)/ (a + b + c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:29:04) 
-- CODE:
x = float(input("a:"))
y=float(input("b:"))
z= float(input("c:"))
var1=(x**2)+(y**2)+(z**2)
var2=(a+b+c)
var3=var1/var2
print(round(var3,7))

























































































































































































































































                                                                                                                                                                   


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var2=(a+b+c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:29:29) 
-- CODE:
x = float(input("a:"))
y=float(input("b:"))
z= float(input("c:"))
var1=(x**2)+(y**2)+(z**2)
var2=(x+y+z)
var3=var1/var2
print(round(var3,7))

























































































































































































































































                                                                                                                                                                   


-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:29:35) 
-- CODE:
x = float(input("a:"))
y=float(input("b:"))
z= float(input("c:"))
var1=(x**2)+(y**2)+(z**2)
var2=(x+y+z)
var3=var1/var2
print(round(var3,7))

























































































































































































































































                                                                                                                                                                   


-- EXECUTION TIME:
0.226841
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
